--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -30,6 +30,16 @@
         </nav>
     </header>
     <div class="container">
+        <form>
+            <label for="categories">Choose a category:</label>
+                <select id="categories">
+                    @foreach (var item in ProductCategoryDaoMemory.GetInstance().GetAll())
+                    {
+                        <option value="@item.Name">@item.Name</option>;
+                    }
+                </select>
+                <button type="button" onclick="Category()">odświerzb</button>
+        </form>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
