--- a/src/Codecool.CodecoolShop/Views/_ViewImports.cshtml
+++ b/src/Codecool.CodecoolShop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Codecool.CodecoolShop
 @using Codecool.CodecoolShop.Models
+@using Codecool.CodecoolShop.Daos.Implementations
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
