Refactor functions names

--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         <option value="@item.Name">@item.Name</option>;
                     }
                 </select>
-                <button type="button" onclick="Category()">odświerzb</button>
+                <button type="button" onclick="RefreshProducts()">odświerzb</button>
         </form>
         <main role="main" class="pb-3">
             @RenderBody()
