--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
         <form>
             <label for="categories">Choose a category:</label>
                 <select id="categories">
+                    <option value="All">All</option>;
                     @foreach (var item in ProductCategoryDaoMemory.GetInstance().GetAll())
                     {
                         <option value="@item.Name">@item.Name</option>;
