Update Payment site design

--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -29,17 +29,17 @@
             </div>
         }
     </div>
-    <div class="item">
+   @* <div class="item">
         checkout data...
-    </div>
+    </div>*@
     <div class="item" id="payment-option-container">
-        <div>
+        @*<div>
             <label for="payment-option">Choose payment option:</label>
             <select id="payment-option" name="payment-option" onchange="PaymentSelectChange()">
               <option value="cash">Cash</option>
               <option value="creditCard">Credit Card</option>
             </select>
-        </div>
+        </div>*@
         <div class="payment-form-container">
             <h1>Confirm your payment</h1>
             <div class="first-row">
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="third-row">
-                <h3>Card number</h3>
+                <h3>Expiration date</h3>
                 <div class="selection">
                     <div class="date">
                         <select name="months" id="months">
