--- a/src/Codecool.CodecoolShop/wwwroot/css/site.css
+++ b/src/Codecool.CodecoolShop/wwwroot/css/site.css
@@ -75,11 +75,6 @@ body {
     flex-direction: column;
 }
 
-.item {
-    margin: 5mm;
-    background-color: lavender;
-}
-
 #payment-option-container{
     margin: 0;
     padding: 0;
@@ -91,18 +86,18 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: azure;
 }
 
 .payment-form-container{
     width: 750px;
     height: 500px;
     border: 1px solid;
-    background-color: white;
+    background-color: azure;
     display: flex;
     flex-direction: column;
     padding: 40px;
     justify-content: space-around;
+    border-radius: 4vh;
 }
 
 .cards img{
