Link cart page & checkout page

--- a/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
@@ -28,7 +28,7 @@
     </tr>
     </tbody>
   </table>
-  <div style="text-align: center; margin-top: -10px"><button class="checkout-button">Checkout</button></div>
+  <div style="text-align: center; margin-top: -10px"><a class="checkout-button" asp-controller="Checkout" asp-action="Index">Checkout</a></div>
 </div>
 
 <div class="shopping-cart" style="margin-left: 2%">
