Link checkout page & payment page

--- a/src/Codecool.CodecoolShop/Views/Checkout/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Checkout/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Chceckout";
 }
 
-<form action="sendCheckout" method="post">
+<form action="Checkout/sendCheckout" method="post">
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" name="name" placeholder="Joe Doe">
