--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="cvv">
                     <h3>CVV</h3>
                     <div class="input-field">
-                        <input type="password" />
+                        <input type="text" maxlength="3" />
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <div class="card-number">
                     <h3>Card number</h3>
                     <div class="input-field">
-                        <input type="text" />
+                        <input type="text" id="ccn" type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="19" placeholder="xxxx xxxx xxxx xxxx"/>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#">Confirm</a>
+            <a asp-controller="Payment" asp-action="Confirmation">Confirm</a>
         </div>
     </div>
 
