--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     </ul>
                 </div>
             </div>
+            <partial name="_LoginPartial.cshtml"/>
         </nav>
     </header>
     <div class="container">
