--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -28,9 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" onclick="openCartModal()" asp-area="" asp-controller="Cart" asp-action="Cart"><span id="shoppingCart"><img src="/img/ShoppingCartIcon.png" style="width: 20px; height: 20px"/>0</span></a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" onclick="openCartModal()" asp-area="" asp-controller="Cart" asp-action="Cart"><span id="shoppingCart"><img src="/img/ShoppingCartIcon.png" style="width: 20px; height: 20px"/>0</span></a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
