--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -16,7 +16,7 @@
         <button type="button" onclick="RefreshProducts('category')">Refresh</button>
     </form>
     <form>
-        <label for="supliers">Choose a suplier:</label>
+        <label for="supliers">Choose a supplier:</label>
             <select id="supliers">
                 <option value="0">All</option>;
                 @foreach (var item in Model.Item3)
@@ -30,7 +30,7 @@
     @foreach (var element in Model.Item1)
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px; margin-bottom: 200px;";>
-            <div class="card">
+            <div class="card" style="min-height: 533px">
                 <img src="/img/@(element.Name).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
 
                 <div class="card-body">
@@ -41,7 +41,7 @@
                     </h5>
                     <h5 class="card-title">@element.Name</h5>
                     <p class="card-text">@element.Description.</p>
-                    <p class="card-text">Category: @element.ProductCategory.Department</p>
+                    <p class="card-text">Category: @element.ProductCategory.Name</p>
                     <p class="card-text">Supplier: @element.Supplier.Name</p>
                     <p class="card-text text-center"><strong>Price: @element.DefaultPrice.ToString("C2")</strong></p>
                     <span id="@element.Id"><a onclick="addToCart(@element.Id)"  onload="addToCart(@element.Id)" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a></span>
